<resources>
    <string name="app_name" translatable="false">Bookid</string>
    <string name="default_title">Title not found</string>
    <string name="default_author">Author not found</string>
    <string name="publication_date_default">Publication date not found</string>
    <string name="rating_default">Rating not found</string>
    <string name="buy_book">Buy book</string>
    <string name="borrow_book">Borrow book</string>
    <string name="find_in_library">Find in library</string>
    <string name="other_author_books">Other author\'s books</string>
    <string name="similar_books">Similar books</string>
    <string name="add_to_shelf">Add to Shelf</string>
    <string name="remove_from_shelf">Remove from shelf</string>
    <string name="default_nick">Default Nick</string>
    <string name="support_and_settings">Support &amp; Settings</string>
    <string name="search_for_book">Search for books…</string>
    <string name="login_fail">Failed to sign in!</string>
    <string name="no_shelfs">You don\'t have any shelfs.\nWould you like to create one?</string>
    <string name="create_shelf">Create shelf</string>
    <string name="rename_shelf">Rename shelf</string>
    <string name="edit_shelf">Edit shelf</string>
    <string name="cancel">Cancel</string>
    <string name="enter_shelf_name">Enter a shelf name</string>
    <string name="ok" translatable="false">OK</string>
    <string name="choose_shelf">Choose shelf</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy_text">You can find a Privacy Policy <a href="https://google.com">here</a></string>
    <string name="contact_text" translatable="false">dragovonnova@gmail.com</string>
    <string name="version">Version 1.0</string>
    <string name="sign_out">Sign out</string>
    <string name="see_profile">See Profile</string>
    <string name="shelfs">Shelfs</string>
    <string name="manage_shelfs">Manage shelfs</string>
    <string name="quit_question">Do you want to quit Bookid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_profile">My profile</string>
    <string name="book_added">Book added to %s</string>
    <string name="book_removed">Book removed from %s</string>
    <string name="signed_out">Signed out</string>
    <string name="isbn13" translatable="false">ISBN13</string>
    <string name="isbn10" translatable="false">ISBN10</string>
    <string name="pages_count">Pages count</string>
    <string name="cathegories">Cathegories</string>
    <string name="no_info">No info</string>
    <string name="publication_date">Publication date</string>
    <string name="publisher">Publisher</string>
    <string name="pdf_availability">Available as PDF</string>
    <string name="epub_availability">Available as EPUB</string>
    <string name="buy">Buy for %.2f %s</string>
    <string name="more_info">More info…</string>
    <string name="preview">Preview book</string>
    <string name="expand">Expand</string>
    <string name="shrink">Shrink</string>
    <string name="search">Search</string>
    <string-array name="basic_shelfs">
        <item>Favorites</item>
        <item>Saved</item>
        <item>Recently viewed</item>
    </string-array>
    <string name="select_base_shelf">Select your base shelf</string>
    <string name="books_number">%d books</string>
    <string name="default_shelf">default shelf</string>
    <string name="error_occurred">Error occurred</string>
    <string name="share_failed">Failed to share the book</string>
</resources>
